# model_experiments

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_REVIEW.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.worker  ISSUES_LOG.md  ISSUE_LOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.smoke-bootstrap.yml  docker-compose.smoke.yml  docker-compose.yml  run_agent_loop.sh
.github/workflows/: ci.yml  e2e-compose.yml
crates/api-types/: Cargo.toml
crates/api-types/src/: api_keys.rs  common.rs  error.rs  health.rs  identities.rs  identity.rs  ids.rs  inboxes.rs  lib.rs  logs.rs  pagination.rs  personas.rs  sessions.rs  worker_tasks.rs  workers.rs  workflow.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  config.rs  config_file.rs  http_util.rs  lib.rs  log_ops.rs  main.rs  resolved.rs  sse.rs
crates/cli/src/commands/: api_keys.rs  attach.rs  credentials.rs  health.rs  logs.rs  mod.rs  session.rs  workers.rs
crates/cli/tests/: help_and_subcommands.rs  missing_api_key.rs
crates/server/: Cargo.toml  openapi.yaml
crates/server/migrations/: 20240101000000_initial_schema.sql  20240101000001_initial_schema.sql  20250320100000_initial_schema.sql  20250320110000_identity_oauth_metadata.sql  20250320120000_workers_version_capabilities.sql  20250320140000_job_completion_columns.sql  20250320150000_jobs_queue_ordinal.sql  20250320160000_logs_api_fields.sql  20250321120000_agents_inbox.sql
crates/server/src/: auth.rs  config.rs  db.rs  error.rs  git_repos.rs  identities.rs  inbox.rs  key_material.rs  keys.rs  lib.rs  logs.rs  main.rs  oauth.rs  retention.rs  sessions.rs  sse.rs  sse_hub.rs  state.rs  worker_tasks.rs  workers.rs
crates/server/src/engine/: chat.rs  jobs.rs  mod.rs  pr.rs  workflows.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: api_keys.rs  health.rs  identities.rs  logs.rs  mod.rs  oauth.rs  personas.rs  sessions.rs  tasks.rs  workers.rs
crates/server/src/services/: mod.rs  pr_service.rs
crates/server/tests/: api_keys_integration.rs  api_keys_test.rs  chat_workflow_test.rs  e2e_api_keys.rs  e2e_chat.rs  e2e_loop.rs  e2e_sentinel.rs  e2e_workers.rs  health_integration.rs  identities_test.rs  integration.rs  migrations_integration.rs  oauth_integration.rs  oauth_test.rs  openapi_contract.rs  sessions_integration.rs  sse_test.rs  tasks_test.rs  worker_integration.rs  workers_integration.rs
crates/server/tests/helpers/: mod.rs
crates/worker/: Cargo.toml  README.md
crates/worker/src/: agent_executor.rs  agent_runner.rs  api_client.rs  config.rs  control_plane.rs  file_logger.rs  git_metadata.rs  git_ops.rs  lib.rs  log_shipper.rs  logger.rs  main.rs  task_execution.rs  task_executor.rs  task_loop.rs
crates/worker/src/agent_cli/: invoke.rs  kind.rs  mod.rs  platform.rs  redact.rs  runner.rs
crates/worker/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  wsl.rs
crates/worker/tests/: control_plane_client.rs  e2e_file_remote_stub.rs
docs/: API_OVERVIEW.md  ARCHITECTURE.md  CICD_DESIGN.md  CLIENT_EXPERIENCE.md  DECISIONS.md  DOC_CLARIFICATION_NEEDED.md  DOC_REVIEW.md  GETTING_STARTED.md  GETTING_STARTED_WITH_DOCKER.md  GIT_CLONE_SPEC.md  HOSTING.md  IMPLEMENTATION_BOUNDARIES.md  OPEN_POINTS_AND_DECISIONS.md  PHASE2_DESIGN.md  PRODUCT.md  PROJECT_KICKOFF.md  README.md  SSE_EVENTS.md  TECH_STACK.md  TROUBLESHOOTING.md
plan/: 00-upfront-design-boundaries-complete.md  00-upfront-design-boundaries-pending.md  001-workspace-and-foundation.complete.md  002-worker-registration-and-heartbeat.complete.md  003-session-and-job-lifecycle.complete.md  004-task-pull-and-completion.complete.md  005-log-streaming-and-history.complete.md  006-worker-binary.complete.md  007-cli-core.complete.md  008-cli-logs-and-attach.complete.md  009-web-ui-scaffold.complete.md  01-monorepo-docker-tooling-complete.md  01-monorepo-docker-tooling-pending.md  01-repo-scaffolding-complete.md  010-web-ui-sessions-and-logs.complete.md  011-chat-multiturn.complete.md  012-identities-apikeys-personas.complete.md  013-oauth-and-token-refresh.complete.md  014-pr-mr-creation.complete.md  015-docker-and-compose.complete.md  016-e2e-verification.complete.md  02-api-types-design-complete.md  02-api-types-openapi-baseline-complete.md  02-api-types-openapi-baseline-pending.md  03-ci-rust-web-openapi-complete.md  03-ci-rust-web-openapi-pending.md  03-database-schema-complete.md  04-server-foundation-complete.md  04-server-health-config-complete.md  04-server-health-config-pending.md  05-api-key-auth-complete.md  05-database-migrations-complete.md  05-database-migrations-pending.md  06-identity-credentials-complete.md  06-server-api-keys-bootstrap-complete.md  06-server-api-keys-bootstrap-pending.md  07-git-oauth-flows-complete.md  07-server-identities-byol-complete.md  07-server-identities-byol-pending.md  08-server-oauth-git-complete.md  (+63 more)
prompts/: IMPLEMENTER.md  PLANNER.md
scripts/: ci-local.sh  compose-smoke.sh  e2e_cli.sh
tests/: mock_agent.sh
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/scripts/: check-health.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/api/: agents.ts  client.ts  errors.test.ts  errors.ts  health.ts  identities.ts  sessions.ts  sse.ts  types.ts  workers.ts
web/src/components/: Layout.tsx  LogViewer.tsx  SessionList.tsx  StatusBadge.tsx  WorkerPoolHeterogeneityBanner.test.tsx  WorkerPoolHeterogeneityBanner.tsx
web/src/context/: SettingsProvider.tsx
web/src/hooks/: useSessionEventsStream.ts  useSessionLogsStream.ts  useSettings.ts
web/src/layout/: AppLayout.tsx
web/src/lib/: logMerge.test.ts  logMerge.ts  sessionJobHints.test.ts  sessionJobHints.ts  sseBackoff.test.ts  sseBackoff.ts  sseFetch.ts  sseParse.test.ts  sseParse.ts  workerPoolHeterogeneity.test.ts  workerPoolHeterogeneity.ts
web/src/pages/: Dashboard.tsx  HomePage.tsx  PlaygroundPage.tsx  SessionCreate.tsx  SessionCreatePage.test.tsx  SessionCreatePage.tsx  SessionDetail.tsx  SessionDetailPage.tsx  SessionsListPage.tsx  Settings.tsx  (+3 more)
(+2 files in other folders)
