[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Harness CLI (commands land in plan tasks 20–21)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "remote-harness"
path = "src/main.rs"

[dependencies]
api-types = { path = "../api-types" }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3"
