[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remote-harness"
path = "src/main.rs"

[dependencies]
api-types = { path = "../api-types" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
