[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "remote-harness"
path = "src/main.rs"

[dependencies]
api-types = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
rpassword = "5"
dirs = "5"
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
