[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Harness control plane HTTP API"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
api-types = { path = "../api-types" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls-ring",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls-ring",
] }
tower = { version = "0.5", features = ["util"] }
url = "2.5"
wiremock = "0.5"
