[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote Harness worker: control plane client, Git (libgit2), agent CLI, end-to-end task execution"

[lib]
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
api-types = { path = "../api-types" }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
