[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
api-types = { path = "../api-types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
rand = "0.8"
dirs = "5"
urlencoding = "2"
tempfile = "3"
which = "7"
libc = "0.2"
